--- a/Branch.App/packages.config
+++ b/Branch.App/packages.config
@@ -2,6 +2,8 @@
 
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="MarkdownDeep.NET" version="1.4" targetFramework="net45" />
+  <package id="MarkdownHelper" version="1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
