--- a/Branch.Core/Branch.Core.csproj
+++ b/Branch.Core/Branch.Core.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Api\Halo4\WaypointManager.cs" />
     <Compile Include="Api\Authentication\I343.cs" />
+    <Compile Include="BranchStuff\GamertagReplacementManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
