--- a/Branch.App/Web.config
+++ b/Branch.App/Web.config
@@ -6,14 +6,15 @@
   -->
 <configuration>
 	<system.diagnostics>
-		<trace>
-			<listeners>
-				<add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
-					<filter type="" />
-				</add>
-			</listeners>
-		</trace>
-	</system.diagnostics>
+  <trace>
+   <listeners>
+    <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+     name="AzureDiagnostics">
+     <filter type="" />
+    </add>
+   </listeners>
+  </trace>
+ </system.diagnostics>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
