--- a/Branch.Service.Halo4/app.config
+++ b/Branch.Service.Halo4/app.config
@@ -2,14 +2,13 @@
 
 <configuration>
 	<system.diagnostics>
-		<trace>
-			<listeners>
-				<add
-					type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-					name="AzureDiagnostics">
-					<filter type="" />
-				</add>
-			</listeners>
-		</trace>
-	</system.diagnostics>
+  <trace>
+   <listeners>
+    <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+     name="AzureDiagnostics">
+     <filter type="" />
+    </add>
+   </listeners>
+  </trace>
+ </system.diagnostics>
 </configuration>
