--- a/Branch.Core.Game.Halo4/Branch.Core.Game.Halo4.csproj
+++ b/Branch.Core.Game.Halo4/Branch.Core.Game.Halo4.csproj
@@ -76,7 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\WaypointManager.cs" />
+    <Compile Include="Api\Manager.cs" />
     <Compile Include="Models\343\DataModels\ChallengeModel.cs" />
     <Compile Include="Models\343\DataModels\CommendationModels.cs" />
     <Compile Include="Models\343\DataModels\CommonModels.cs" />
