--- a/Branch.Core.Game.HaloReach/Branch.Core.Game.HaloReach.csproj
+++ b/Branch.Core.Game.HaloReach/Branch.Core.Game.HaloReach.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Enums\MapType.cs" />
     <Compile Include="Enums\ResponseStatus.cs" />
     <Compile Include="JsonConverters\MapTypeConverter.cs" />
+    <Compile Include="JsonConverters\PlayTimeConverter.cs" />
     <Compile Include="Models\343\DataModels\Commendation.cs" />
     <Compile Include="Models\343\DataModels\CommendationState.cs" />
     <Compile Include="Models\343\DataModels\Emblem.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Models\343\Responces\Metadata.cs" />
     <Compile Include="Models\343\Responces\ServiceRecord.cs" />
     <Compile Include="Models\343\Response.cs" />
+    <Compile Include="Models\Branch\ServiceRecordEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
